src/less/pages.less
/* === Pages === */
.pages {
    position: relative;
    .size(100%,100%);
    overflow: hidden;
    background: #000;
}
.page {
    .border-box();
    .full-size();
    overflow: hidden;
    background: #efeff4;
    .translate3d(0,0,0);
    opacity: 1;
    .box-shadow(none);
    &.cached {
        display: none;
    }
}
.page-on-left {
    opacity: 0.9;
    .box-shadow(0 0 12px rgba(0,0,0,0.5));
    .translate3d(-20%);
}
.page-on-center {
    opacity: 1;
    .box-shadow(0 0 12px rgba(0,0,0,0.5));
    .translate3d(0);
}
.page-on-right {
    .box-shadow(none);
    opacity: 1;
    .translate3d(100%);
}
.page-content {
    .scrollable();
    .border-box();
    height: auto;
    min-height: 100%;
    overflow: hidden;
}

@pageDuration: 400ms;

//Class that will trigger transition during page custom transitions (like swipe-back)
.page-transitioning {
    .transition(@pageDuration);
}

// From/to Right To/from Center animations
.page-from-right-to-center {
    .animation(pageFromRightToCenter @pageDuration forwards);
}
.page-from-center-to-right {
    .animation(pageFromCenterToRight @pageDuration forwards);
}
@-webkit-keyframes pageFromRightToCenter {
    from {
        .box-shadow(none);
        -webkit-transform: translate3d(100%,0,0);
    }
    to {
        .box-shadow(0 0 12px rgba(0,0,0,0.5));
        -webkit-transform: translate3d(0,0,0);
    }
}
@-webkit-keyframes pageFromCenterToRight {
    from {
        .box-shadow(0 0 12px rgba(0,0,0,0.5));
        -webkit-transform: translate3d(0,0,0);
    }
    to {
        .box-shadow(none);
        -webkit-transform: translate3d(100%,0,0);
    }
}
@keyframes pageFromRightToCenter {
    from {
        .box-shadow(none);
        transform: translate3d(100%,0,0);
    }
    to {
        .box-shadow(0 0 12px rgba(0,0,0,0.5));
        transform: translate3d(0,0,0);
    }
}
@keyframes pageFromCenterToRight {
    from {
        .box-shadow(0 0 12px rgba(0,0,0,0.5));
        transform: translate3d(0,0,0);
    }
    to {
        .box-shadow(none);
        transform: translate3d(100%,0,0);
    }
}
// From/to Center To/from Left animations
.page-from-center-to-left {
    .animation(pageFromCenterToLeft @pageDuration forwards);
}
.page-from-left-to-center {
    .animation(pageFromLeftToCenter @pageDuration forwards);
}

@-webkit-keyframes pageFromCenterToLeft {
    from {
        opacity: 1;
        -webkit-transform: translate3d(0,0,0);
    }
    to {
        opacity: 0.9;
        -webkit-transform: translate3d(-20%,0,0);
    }
}
@-webkit-keyframes pageFromLeftToCenter {
    from {
        opacity: 0.9;
        -webkit-transform: translate3d(-20%,0,0);
    }
    to {
        opacity: 1;
        -webkit-transform: translate3d(0,0,0);
    }
}
@keyframes pageFromCenterToLeft {
    from {
        opacity: 1;
        transform: translate3d(0,0,0);
    }
    to {
        opacity: 0.9;
        transform: translate3d(-20%,0,0);
    }
}
@keyframes pageFromLeftToCenter {
    from {
        opacity: 0.9;
        transform: translate3d(-20%,0,0);
    }
    to {
        opacity: 1;
        transform: translate3d(0,0,0);
    }
}
// Disable Box shadow animation on Android
html.android {
    .page {
        box-shadow: none !important;
    }
    .page-from-right-to-center {
        .animation(pageFromRightToCenterDegrade @pageDuration forwards);
    }
    .page-from-center-to-right {
        .animation(pageFromCenterToRightDegrade @pageDuration forwards);
    }
}
@-webkit-keyframes pageFromRightToCenterDegrade {
    from {
        -webkit-transform: translate3d(100%,0,0);
    }
    to {
        -webkit-transform: translate3d(0,0,0);
    }
}
@-webkit-keyframes pageFromCenterToRightDegrade {
    from {
        -webkit-transform: translate3d(0,0,0);
    }
    to {
        -webkit-transform: translate3d(100%,0,0);
    }
}
@keyframes pageFromRightToCenterDegrade {
    from {
        transform: translate3d(100%,0,0);
    }
    to {
        transform: translate3d(0,0,0);
    }
}
@keyframes pageFromCenterToRightDegrade {
    from {
        transform: translate3d(0,0,0);
    }
    to {
        transform: translate3d(100%,0,0);
    }
}

